--- a/index.html
+++ b/index.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Excursion</title>
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
-</head>
-<body>
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
+  </head>
+  <body>
     <header>
-        <h1>Discover hidden places in the world around you</h1>
-        <nav>
-            <a href="#"><p>Download Excursion (Coming Soon!)</p></a>
-        </nav>
+      <h1>Discover hidden places in the world around you</h1>
+      <nav>
+        <a href="#"><p>Download Excursion (Coming Soon!)</p></a>
+      </nav>
     </header>
     <main>
-        <section class="preview">
-
-        </section>
-        <section class="features">
-            <h1>Your Personal Travel Guide</h1>
-            <figure>
-                <img src="#">
-                <figcaption>Excursion remembers places you like, and recommends new points of interest around you.</figcaption>
-            </figure>
-        </section>
-        <section class="downloads">
-            <img src="#">
-            <h2>Coming Soon for iPhone and Android</h2>
-            <a href="#"><p>Download Excursion (Coming Soon!)</p></a>
-        </section>
+      <section class="preview">
+        <video autoplay muted>
+          <source src="./resources/videos/excursion.mp4" type="video/mp4">
+          Your browser does not support this video, Please update your browser.
+        </video>
+      </section>
+      <section class="features">
+        <h2>Your Personal Travel Guide</h2>
+        <figure>
+          <figcaption>
+            Excursion remembers places you like, and recommends new points of
+            interest around you.
+          </figcaption>
+        </figure>
+      </section>
+      <section class="downloads">
+        <img src="./resources/images/camp.jpeg" alt="excursion camp" />
+        <img
+          class="mobileapp"
+          src="./resources/images/phone.png"
+          alt="excursion mobile app"
+        />
+        <h3>Coming Soon for iPhone and Android</h3>
+        <a href="#"><p>Download Excursion (Coming Soon!)</p></a>
+      </section>
     </main>
     <footer>
-        <h4>© Excursion</h4>
+      <h4>© Excursion</h4>
     </footer>
-    
-</body>
+  </body>
 </html>
