--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
       <section class="preview">
-        <video autoplay muted>
+        <video autoplay muted loop>
           <source src="./resources/videos/excursion.mp4" type="video/mp4">
           Your browser does not support this video, Please update your browser.
         </video>
