--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <main>
       <section class="preview">
         <video autoplay muted loop>
-          <source src="./resources/videos/excursion.mp4" type="video/mp4">
+          <source
+            src="https://content.codecademy.com/programs/freelance-one/excursion/videos/excursion.mp4"
+            type="video/mp4"
+          />
           Your browser does not support this video, Please update your browser.
         </video>
       </section>
@@ -31,12 +34,8 @@
         </figure>
       </section>
       <section class="downloads">
-        <img src="./resources/images/camp.jpeg" alt="excursion camp" />
-        <img
-          class="mobileapp"
-          src="./resources/images/phone.png"
-          alt="excursion mobile app"
-        />
+        <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="excursion camp"/>
+        <img class="mobileapp" src="./resources/images/phone.png" alt="excursion mobile app"/>
         <h3>Coming Soon for iPhone and Android</h3>
         <a href="#"><p>Download Excursion (Coming Soon!)</p></a>
       </section>
