fixed mobile icon broken link and looks project is complete

--- a/index.html
+++ b/index.html
@@ -34,8 +34,15 @@
         </figure>
       </section>
       <section class="downloads">
-        <img src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg" alt="excursion camp"/>
-        <img class="mobileapp" src="./resources/images/phone.png" alt="excursion mobile app"/>
+        <img
+          src="https://content.codecademy.com/programs/freelance-one/excursion/images/camp.jpg"
+          alt="excursion camp"
+        />
+        <img
+          class="mobileapp"
+          src="https://content.codecademy.com/programs/freelance-one/excursion/images/phone.png"
+          alt="excursion mobile app"
+        />
         <h3>Coming Soon for iPhone and Android</h3>
         <a href="#"><p>Download Excursion (Coming Soon!)</p></a>
       </section>
